merge release crypto-primitives 1.5.1.0